# xyh_ml

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
config/: classes.yaml  data_mt.yaml  data_tt.yaml  inputs.yaml  network.yaml  training_and_network.yaml
src/xyh_ml/: constants.py  mlflow_utils.py
src/xyh_ml/cli/: train_pnn.py
src/xyh_ml/config/: classes.py  data.py  inputs.py  network.py
src/xyh_ml/data/: data_frame.py  datasets.py  reweighting.py  transformations.py
src/xyh_ml/lightning/: pnn_classifier.py
src/xyh_ml/models/: losses.py  mlp.py
src/xyh_ml/scripts/: evaluate_metrics.py  evaluate_prediction.py  model.py  train_dnn.py
tests/config/: test_classes.py  test_inputs.py  test_network.py
