# -----------------------------------------------------------------------------
[project]
name = "xyh_ml"
version = "0.0.1alpha"
description = "Machine learning developments for the X &rightarrow; YH &rightarrow; bb&tau;&tau; analysis"
authors = [ { name = "Moritz Molch", email = "moritz.molch@kit.edu" } ]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lightning",
    "mlflow",
    "numpy",
    "pandas",
    "tables",
    "pydantic",
    "scikit-learn",
    "matplotlib",
    "mplhep",
    "hist",
    "seaborn"
]

# -----------------------------------------------------------------------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xyh_ml"]

# -----------------------------------------------------------------------------

[tool.pytest]
addopts = ["--import-mode=importlib"]

# -----------------------------------------------------------------------------

[tool.ruff]
line-length = 79

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

# -----------------------------------------------------------------------------

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
pytorch-gpu = "*"
cuda-version = "12.8.*"
ipython = ">=9.15.0,<10"

[tool.pixi.pypi-dependencies]
xyh_ml = { path = ".", editable = true }

[tool.pixi.system-requirements]
cuda = "12.0"

[tool.pixi.tasks]
